rkisp1: Add imx258 config
Signed-off-by: Luigi311 <git@luigi311.com>

--- a/src/ipa/rkisp1/data/imx258.yaml
+++ b/src/ipa/rkisp1/data/imx258.yaml
@@ -3,6 +3,16 @@
 ---
 version: 1
 algorithms:
+  - Af:
+      min-vcm-position: 0
+      max-vcm-position: 1023
+      coarse-search-step: 30
+      fine-search-step: 1
+      fine-scan-range: 0.05
+      max-variance-change: 0.3
+      wait-frames-lens: 2 # tuned for 30fps stream
+      isp-threshold: 128
+      isp-var-shift: 4
   - Agc:
   - Awb:
   - BlackLevelCorrection:
